--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,13 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Logfile-EPrints
-version:      1.10
+version:      1.11
 version_from: lib/Logfile/EPrints.pm
 installdirs:  site
 requires:
     Date::Parse:                   0.1
     Geo::IP::PurePerl:             0.1
+    HTTP::OAI:                     3.19
     LWP::UserAgent:                0.1
     Socket:                        0.1
     Text::CSV_XS:                  0.1
