--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Logfile-EPrints
-version:      1.11
+version:      1.12
 version_from: lib/Logfile/EPrints.pm
 installdirs:  site
 requires:
+    Carp:                          0.1
     Date::Parse:                   0.1
     Geo::IP::PurePerl:             0.1
     HTTP::OAI:                     3.19
