--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,14 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Logfile-EPrints
-version:      1.18
+version:      1.19
 version_from: lib/Logfile/EPrints.pm
 installdirs:  site
 requires:
     Carp:                          0.1
     Date::Parse:                   0.1
-    Geo::IP::PurePerl:             0.1
+    Encode:                        0.1
+    Geo::IP::PurePerl:             1.17
     LWP::UserAgent:                0.1
     SDBM_File:                     0.1
     Socket:                        0.1
