--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,13 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Logfile-EPrints
-version:      1.19
-version_from: lib/Logfile/EPrints.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Logfile-EPrints
+version:             1.20
+abstract:            Process Web log files for institutional repositories
+license:             ~
+author:              
+    - Timothy D Brody <tdb01r@ecs.soton.ac.uk>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Carp:                          0.1
     Date::Parse:                   0.1
     Encode:                        0.1
@@ -14,6 +17,6 @@ requires:
     Socket:                        0.1
     Text::CSV_XS:                  0.1
     URI:                           0.1
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
